@@ -162,6 +162,7 @@ public class FptrParameters {
     public String postLinePrefix = "";
     public boolean combineReceiptItems = false;
     public boolean printRecVoidItemAmount = false;
+    public boolean FSReceiptItemDiscountEnabled = false;
 
     public FptrParameters() throws Exception {
         font = new FontNumber(PrinterConst.FONT_NUMBER_NORMAL);
@@ -365,6 +366,7 @@ public class FptrParameters {
         postLinePrefix = reader.readString("postLinePrefix", "");
         combineReceiptItems = reader.readBoolean("combineReceiptItems", false);
         printRecVoidItemAmount = reader.readBoolean("printRecVoidItemAmount", false);
+        FSReceiptItemDiscountEnabled = reader.readBoolean("FSReceiptItemDiscountEnabled", false);
         
         
         // paymentNames
